# TwitchYapBotInstaller-Rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
TwitchMarkovChain/: Database.py  MarkovChainBot.py  Settings.py
src/: bubbles.rs  center_window.rs  config.rs  data_structures.rs  gui.rs  lib.rs  main.rs  python_manager.rs
