[package]
name = "yap_bot_installer"
version = "5.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.28.1"
which = "6.0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
async-process = "2.3.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rfd = "0.11.4"
indicatif = "0.17"
image = "0.24"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
xdg = "2.4"
once_cell = "1.19"
webbrowser = "0.8"
arboard = "3.2.0"
include_dir = "0.7"
regex = "1.11.1"
rodio = "0.17"
rand = "0.8"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
embed-resource = "3.0"

[package.metadata.winres]
windows_subsystem = "windows"

[[bin]]
name = "YapBotInstaller"
path = "src/main.rs"

[[bin]]
name = "TwitchYapBot"
path = "src/bin/TwitchYapBot/main.rs"

[[bin]]
name = "YapBotUpdater"
path = "src/bin/YapBotUpdater/main.rs"