[package]
name = "yap_bot_installer"
version = "5.0.2"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.28.1"
which = "6.0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
async-process = "2.3.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rfd = "0.11.4"
indicatif = "0.17"
image = "0.24"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
xdg = "2.4"
once_cell = "1.19"
webbrowser = "0.8"
arboard = "3.2.0"
include_dir = "0.7"
regex = "1.11.1"
rodio = "0.17"
rand = "0.8"
futures-util = "0.3"
egui_extras = "0.32.0"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
winreg = "0.52"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
] }
open = "5.3.2"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "YapBotInstaller"
path = "src/main.rs"

[[bin]]
name = "TwitchYapBot"
path = "src/bin/TwitchYapBot/main.rs"

[[bin]]
name = "YapBotUpdater"
path = "src/bin/YapBotUpdater/main.rs"
